// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownFiltered /> renders the Dropdown with options with no a11y violations 1`] = `
.c1 {
  display: block;
  margin: 0 0 10px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #2C3236;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-size: 15px;
}

.c0 {
  max-width: 100%;
  width: 100%;
}

.c3 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c3:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c3::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c3::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c3:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c3::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c3:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c4 {
  margin: 0;
  padding-left: 16px;
  padding-right: 32px;
  margin-bottom: 0;
}

.c2 {
  position: relative;
}

.c5 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    role="combobox"
  >
    <label
      class="c1"
      for="text-id-test"
      id="downshift-0-label"
    >
      Label
    </label>
    <div
      class="c2"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-0-label"
        autocomplete="off"
        class="c3 c4"
        id="text-id-test"
        name="test"
        value=""
      />
      <div
        class="c5"
      >
        <svg
          aria-hidden="true"
          aria-label="open.menu"
          class="svg-inline--fa fa-chevron-down fa-w-14 "
          color="#818F9B"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DropdownFiltered /> renders the DropdownFiltered with options and a default selected value 1`] = `
.c0 {
  max-width: 100%;
  width: 100%;
}

.c2 {
  width: 100%;
  -webkit-appearance: none;
  outline: none;
  border-radius: 8px;
  padding: 0 16px;
  height: 50px;
  font-size: 15px;
  font-weight: 400;
  color: #2C3236;
  border: 1px solid #818F9B;
  box-shadow: 0 0 4px 0 transparent;
  -webkit-transition-property: border,box-shadow;
  transition-property: border,box-shadow;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
}

.c2:focus {
  border: 1px solid #00D9C5;
  box-shadow: 0 0 4px 0 #00D9C5;
}

.c2::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c2:disabled {
  background-color: #F7F7F7;
  color: #818F9B;
}

.c3 {
  margin: 0;
  padding-left: 16px;
  padding-right: 32px;
  margin-bottom: 0;
}

.c1 {
  position: relative;
}

.c4 {
  position: absolute;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  right: 12px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="c0"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    role="combobox"
  >
    <div
      class="c1"
    >
      <input
        aria-autocomplete="list"
        aria-labelledby="downshift-1-label"
        autocomplete="off"
        class="c2 c3"
        id="text-id-test"
        name="test"
        value="orange"
      />
      <div
        class="c4"
      >
        <svg
          aria-hidden="true"
          aria-label="open.menu"
          class="svg-inline--fa fa-chevron-down fa-w-14 "
          color="#818F9B"
          data-icon="chevron-down"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;
